--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "sequelize": "^6.15.0",
